cluster/apps/media/emby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: media
  labels:
    app: emby
spec:
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 0
        seccompProfile:
          type: RuntimeDefault
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
      - name: emby
        image: linuxserver/emby:4.7.0-beta
        securityContext:
          # runAsUser: 10000
          # runAsGroup: 30000
          allowPrivilegeEscalation: false
        ports:
        - name: https
          containerPort: 8920
          protocol: TCP
        - name: http
          containerPort: 8096
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /config
            subPath: "configs/emby/config"
            readOnly: false
          - name: data
            mountPath: /mnt/share
            readOnly: false
        resources:
          requests:
            gpu.intel.com/i915: 1
            cpu: 1000m
            memory: 1000Mi
          limits:
            gpu.intel.com/i915: 1
            memory: 16000Mi
      volumes:
        - name: data
          persistentVolumeClaim:
              claimName: media
