cluster/apps/media/emby/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
  labels:
    app: emby
spec:
  selector:
    app: emby
  ports:
  - port: 80
    name: http
    targetPort: 8096
  - port: 443
    name: https
    targetPort: 8920
