cluster/apps/media/emby/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emby
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "emby.${SECRET_CLUSTER_DOMAIN}"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          serviceName: emby
          servicePort: 80
